fixed team card contrast issue.

--- a/style/main.css
+++ b/style/main.css
@@ -444,7 +444,9 @@ nav .icon {
     height: 350px;
     width: 220px;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 15px;
+    /*border: 3px solid rgba(0,0,0,1); -> looks real bad*/
+    box-shadow: 0px 7px 5px 7px rgba(0,0,0,0.5);
     display:none;
     opacity: 0;
     transition: opacity 0.2s;
